--- a/app.json
+++ b/app.json
@@ -3,19 +3,18 @@
     "name": "nlw-heat-reactnative",
     "slug": "nlw-heat-reactnative",
     "version": "1.0.0",
+    "scheme": "mobile",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#121214"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
